--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   db:
     image: postgres:15-alpine
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: crypto_exchange
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:5432"
     networks:
       - crypto-network
 
@@ -19,9 +19,11 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/crypto_exchange
-      JWT_SECRET_KEY: your-secret-key-change-in-production
-      FLASK_ENV: development
+      DATABASE_URL: ${DATABASE_URL}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
+      FLASK_ENV: ${FLASK_ENV}
+      COMMISSION_RATE: ${COMMISSION_RATE}
+      INITIAL_BALANCE: ${INITIAL_BALANCE}
     ports:
       - "5000:5000"
     networks:
@@ -30,15 +32,20 @@ services:
       - ./backend:/app
 
   frontend:
-    build: ./frontend
+    build: 
+      context: ./frontend
+      args:
+        REACT_APP_API_URL: ${REACT_APP_API_URL}
+        REACT_APP_COMMISSION_RATE: ${REACT_APP_COMMISSION_RATE}
     depends_on:
       - backend
     ports:
-      - "3000:80"
+      - "${FRONTEND_PORT}:80"
     networks:
       - crypto-network
     environment:
-      REACT_APP_API_URL: http://localhost:5000/api
+      REACT_APP_API_URL: ${REACT_APP_API_URL}
+      REACT_APP_COMMISSION_RATE: ${REACT_APP_COMMISSION_RATE}
 
 volumes:
   postgres_data:
