--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,54 +3,42 @@ version: '3.8'
 services:
   db:
     image: postgres:15-alpine
-    env_file: .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB-crypto_exchange}
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: crypto_exchange
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
-    networks:
-      - crypto-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d crypto_exchange"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   backend:
     build: ./backend
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
-      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
-      FLASK_ENV: ${FLASK_ENV}
-      COMMISSION_RATE: ${COMMISSION_RATE}
-      INITIAL_BALANCE: ${INITIAL_BALANCE}
+      DATABASE_URL: postgresql://user:password@db:5432/crypto_exchange
+      JWT_SECRET_KEY: super-secret-key
+      FLASK_ENV: development
     ports:
       - "5000:5000"
-    networks:
-      - crypto-network
-    volumes:
-      - ./backend:/app
+    restart: unless-stopped
+    command: sh -c "sleep 5 && python app.py"
 
   frontend:
-    build: 
-      context: ./frontend
-      args:
-        REACT_APP_API_URL: ${REACT_APP_API_URL}
-        REACT_APP_COMMISSION_RATE: ${REACT_APP_COMMISSION_RATE}
+    build: ./frontend
     depends_on:
       - backend
     ports:
-      - "${FRONTEND_PORT}:80"
-    networks:
-      - crypto-network
+      - "3000:80"
     environment:
-      REACT_APP_API_URL: ${REACT_APP_API_URL}
-      REACT_APP_COMMISSION_RATE: ${REACT_APP_COMMISSION_RATE}
+      REACT_APP_API_URL: http://localhost:5000/api
 
 volumes:
   postgres_data:
-
-networks:
-  crypto-network:
-    driver: bridge
