--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,15 @@ services:
   db:
     image: postgres:15-alpine
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: crypto_exchange
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d crypto_exchange"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d crypto_exchange"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -23,7 +23,7 @@ services:
       db:
         condition: service_healthy
     environment:
-      DATABASE_URL: postgresql://user:password@db:5432/crypto_exchange
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/crypto_exchange
       JWT_SECRET_KEY: super-secret-key
       FLASK_ENV: development
     ports:
